chatapp-deployment-ecr.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: chatapp
spec:
  selector:
    matchLabels:
      app: chatapp
  replicas: 2
  template:
    metadata:
      labels:
        app: chatapp
    spec:
      containers:
      - name: chatapp
        image: 416604440517.dkr.ecr.ap-south-1.amazonaws.com/chatapp:latest    
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: awsregcred
