chatapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatapp-service
  annotations:
     external-dns.alpha.kubernetes.io/hostname: devmani.ml
  labels:
   run: chatapp
spec:
  type: LoadBalancer
  ports: 
  - port: 80
    targetPort: 8000 
  selector:
    app: chatapp
